--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+.App{
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+select option{
+    cursor: pointer;
+}
+button{
+    border: none;
+    color: white;
+    height: 35px;
+    width: 50px;
+    background-color: blue;
+    border-radius: 10%;
+    cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button:disabled{
+    background-color: lightblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form__input-field{
+    border: 1px solid lightgray;
+    height: 30px;
+    width: 300px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form__add-btn{
+    margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.form__list{
+    position: absolute;
+    margin-top:20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form__items{
+    min-width: 355px;
+    padding:15px 0 15px 0;
+    border: 1px solid lightgray;
 }
+
+.form__items:not(:first-child){
+    border-top:none;
+}
+
+.form__clean-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    float: right;
+}
+
+.form__clean-btn img{
+    width: 20px;
+    height: 20px;
+}
+
+.form__buttons{
+    padding-top:20px;
+}
+
+.form__select{
+    display: flex;
+    margin-bottom: 40px;
+}
+
